Added ability to choose first view (Categories or Alphabetic List)

--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -4,9 +4,10 @@
 <strong>For iOS 14 and above</strong><br>
 <br>
 <strong>What you can do with this tweak:</strong><br>
-- Disable Categories<br>
-- Disable Labels of Categories<br>
-- Disable Background of Categories<br>
+- Choose First View (Categories, Alphabetic List)<br>
+- Categories (Show/Hide)<br>
+- Labels of Categories (Show/Hide)<br>
+- Background of Categories (Show/Hide)<br>
 <br>
 Configure options from Settings.<br>
 <br>
@@ -20,5 +21,8 @@ This tweak is open sourced <a href="https://github.com/tomaszpoliszuk/AppLibrary
 </div>
 <div style="text-align:center;">
 <img width="268" src="applibrarycontroller3.jpg">
+</div>
+<div style="text-align:center;">
+<img width="268" src="applibrarycontroller4.jpg">
 </div>
 </div>
