--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -4,10 +4,15 @@
 <strong>For iOS 14 and above</strong><br>
 <br>
 <strong>What you can do with this tweak:</strong><br>
-- Choose First View (Categories, Alphabetic List)<br>
-- Categories (Show/Hide)<br>
-- Labels of Categories (Show/Hide)<br>
-- Background of Categories (Show/Hide)<br>
+- Select Mode (Default, Categories and Alphabetic List, Alphabetic List only, Disabled)<br>
+- Alphabetic List Settings:<br>
+- - Rounded Search Field (Enabled/Disabled)<br>
+- - List Headers (Default/Enabled/Disabled)<br>
+- Categories Settings:<br>
+- - Labels of Categories (Show/Hide)<br>
+- - Background of Categories (Show/Hide)<br>
+- - Titles inside Folders (Show/Hide)<br>
+- - Labels inside Folders (Show/Hide)<br>
 <br>
 Configure options from Settings.<br>
 <br>
@@ -21,8 +26,5 @@ This tweak is open sourced <a href="https://github.com/tomaszpoliszuk/AppLibrary
 </div>
 <div style="text-align:center;">
 <img width="268" src="applibrarycontroller3.jpg">
-</div>
-<div style="text-align:center;">
-<img width="268" src="applibrarycontroller4.jpg">
 </div>
 </div>
