--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -1,7 +1,7 @@
 <div>
-<em>App Library Controller - Control App Library<br></em>
+<strong>App Library Controller</strong> - Control App Library<br>
 <br>
-<strong>For iOS 14 and above</strong><br>
+<strong>Compatibility</strong> - iOS 14 and above<br>
 <br>
 <strong>What you can do with this tweak:</strong><br>
 - Select Mode (Default, Categories and Alphabetic List, Alphabetic List only, Disabled)<br>
@@ -17,6 +17,9 @@
 Configure options from Settings.<br>
 <br>
 This tweak is open sourced <a href="https://github.com/tomaszpoliszuk/AppLibraryController" target="_new">on Github</a><br>
+<br>
+for iPad Users:<br>
+if you wish to have partially working App Library on your device select "Alphabetic List" mode and install <a href="cydia://package/com.tomaszpoliszuk.activatorlistenersforapplibrary" target="_new">Activator Listeners for App Library</a> then assign Events to show/hide Alphabetic List part of App Library<br>
 <br>
 <div style="text-align:center;">
 <img width="268" src="applibrarycontroller1.png">
