fixed typo, updated description, updated version number

--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -4,6 +4,7 @@
 <strong>Compatibility</strong> - iOS 14 and above<br>
 <br>
 <strong>What you can do with this tweak:</strong><br>
+- Select UI Style of App Library (Default, Light, Dark)<br>
 - Select Mode (Default, Categories and Alphabetic List, Alphabetic List only, Disabled)<br>
 - Alphabetic List Settings:<br>
 - - Rounded Search Field (Enabled/Disabled)<br>
@@ -22,7 +23,7 @@ for iPad Users:<br>
 if you wish to have partially working App Library on your device select "Alphabetic List" mode and install <a href="cydia://package/com.tomaszpoliszuk.activatorlistenersforapplibrary" target="_new">Activator Listeners for App Library</a> then assign Events to show/hide Alphabetic List part of App Library<br>
 <br>
 <div style="text-align:center;">
-<img width="268" src="applibrarycontroller1.png">
+<img width="268" src="applibrarycontroller1.jpg">
 </div>
 <div style="text-align:center;">
 <img width="268" src="applibrarycontroller2.jpg">
