--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -1,26 +1,27 @@
 <div>
-<strong>App Library Controller</strong> - Control App Library<br>
+<strong>App Library Controller</strong><br>
+ - Control App Library<br>
 <br>
-<strong>Compatibility</strong> - iOS 14 and above<br>
+<strong>Compatibility:</strong><br>
+ - iOS 14 and above<br>
 <br>
-<strong>What you can do with this tweak:</strong><br>
+<strong>Features:</strong><br>
 - Select UI Style of App Library (Default, Light, Dark)<br>
-- Select Mode (Default, Categories and Alphabetic List, Alphabetic List only, Disabled)<br>
+- Select Mode (Enabled, Alphabetic List only, Disabled)<br>
+- Show/Hide Notification Badges (also in Alphabetic List)<br>
 - Alphabetic List Settings:<br>
 - - Rounded Search Field (Enabled/Disabled)<br>
 - - List Headers (Default/Enabled/Disabled)<br>
 - Categories Settings:<br>
 - - Labels of Categories (Show/Hide)<br>
 - - Background of Categories (Show/Hide)<br>
+- Folders Settings:<br>
 - - Titles inside Folders (Show/Hide)<br>
 - - Labels inside Folders (Show/Hide)<br>
 <br>
 Configure options from Settings.<br>
 <br>
 This tweak is open sourced <a href="https://github.com/tomaszpoliszuk/AppLibraryController" target="_new">on Github</a><br>
-<br>
-for iPad Users:<br>
-if you wish to have partially working App Library on your device select "Alphabetic List" mode and install <a href="cydia://package/com.tomaszpoliszuk.activatorlistenersforapplibrary" target="_new">Activator Listeners for App Library</a> then assign Events to show/hide Alphabetic List part of App Library<br>
 <br>
 <div style="text-align:center;">
 <img width="268" src="applibrarycontroller1.jpg">
