hotfix for iOS 14.5 and up - when "Alphabetic List only" was enabled closing App Library was causing springboard to crash - not anymore (but there is visual glitch after closing App Library). Thanks to [opa334](https://github.com/opa334) for pushing me in right direction :)

--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -18,6 +18,9 @@
 - Folders Settings:<br>
 - - Titles inside Folders (Show/Hide)<br>
 - - Labels inside Folders (Show/Hide)<br>
+- Activator Listeners<br>
+- - Show App Library<br>
+- - Hide App Library<br>
 <br>
 Configure options from Settings.<br>
 <br>
