--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -1,6 +1,5 @@
 <div>
-<strong>App Library Controller</strong><br>
- - Control App Library<br>
+<strong>App Library Controller</strong> - <em>Control App Library</em><br>
 <br>
 <strong>Compatibility:</strong><br>
  - iOS 14 and above<br>
@@ -8,6 +7,7 @@
 <strong>Features:</strong><br>
 - Select UI Style of App Library (Default, Light, Dark)<br>
 - Select Mode (Enabled, Alphabetic List only, Disabled)<br>
+- Newly Downloaded Apps - Add to Home Screen/App Library Only<br>
 - Show/Hide Notification Badges (also in Alphabetic List)<br>
 - Alphabetic List Settings:<br>
 - - Rounded Search Field (Enabled/Disabled)<br>
@@ -23,6 +23,10 @@
 - - Hide App Library<br>
 <br>
 Configure options from Settings.<br>
+<br>
+<br>
+<strong>Credits:</strong><br>
+- <a href="https://www.reddit.com/user/ZethyyXD" target="_new">ZethyyXD</a> for testing this tweak on iPadOS<br>
 <br>
 This tweak is open sourced <a href="https://github.com/tomaszpoliszuk/AppLibraryController" target="_new">on Github</a><br>
 <br>
