Moved headers to separate files, updated formatting, disabled installation on iOS 15 (for now, until it will be tested).

--- a/BigBoss_description.html
+++ b/BigBoss_description.html
@@ -2,7 +2,7 @@
 <strong>App Library Controller</strong> - <em>Control App Library</em><br>
 <br>
 <strong>Compatibility:</strong><br>
- - iOS 14 and above<br>
+ - iOS 14<br>
 <br>
 <strong>Features:</strong><br>
 - Select UI Style of App Library (Default, Light, Dark)<br>
